# ChangeLog for dev-perl/DateTime-TimeZone
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.98 2009/04/07 04:26:13 tove Exp $

*DateTime-TimeZone-0.88 (07 Apr 2009)

  07 Apr 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.87.ebuild, +DateTime-TimeZone-0.88.ebuild:
  Version bump. Cleanup

*DateTime-TimeZone-0.87 (06 Apr 2009)

  06 Apr 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.87.ebuild:
  Version bump

*DateTime-TimeZone-0.86 (23 Mar 2009)

  23 Mar 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.86.ebuild:
  Version bump

*DateTime-TimeZone-0.85 (16 Mar 2009)

  16 Mar 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.85.ebuild:
  Version bump

*DateTime-TimeZone-0.84 (23 Jan 2009)

  23 Jan 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.84.ebuild:
  Version bump

  30 Dec 2008; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.80.ebuild, -DateTime-TimeZone-0.82.ebuild,
  -DateTime-TimeZone-0.83.ebuild:
  Cleanup

*DateTime-TimeZone-0.83.01 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +DateTime-TimeZone-0.83.01.ebuild:
  Version bump.

  18 Nov 2008; Torsten Veller <tove@gentoo.org>
  DateTime-TimeZone-0.68.ebuild, DateTime-TimeZone-0.80.ebuild,
  DateTime-TimeZone-0.82.ebuild, DateTime-TimeZone-0.83.ebuild:
  New virtuals: module-build

*DateTime-TimeZone-0.83 (28 Oct 2008)

  28 Oct 2008; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.83.ebuild:
  Version bump

*DateTime-TimeZone-0.82 (20 Oct 2008)

  20 Oct 2008; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.82.ebuild:
  Version bump

  30 Sep 2008; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.75.ebuild, -DateTime-TimeZone-0.79.04.ebuild,
  DateTime-TimeZone-0.80.ebuild:
  Cleanup

*DateTime-TimeZone-0.80 (16 Sep 2008)

  16 Sep 2008; Torsten Veller <tove@gentoo.org>