@@ -4,11 +4,13 @@ DIST DateTime-TimeZone-0.84.tar.gz 376220 RMD160 4d2ef2c62ec81a35cab38e39fcd9ef5
 DIST DateTime-TimeZone-0.85.tar.gz 376214 RMD160 a74f5139a2ddf1538dac3a0275e6d36a526fc45e SHA1 522e05b171200212be0deaec4981cef83691579b SHA256 5d23877fb54c5068e494c6b9429dc9cb1ba4b8aed03945f7ab746e95fe99623f
 DIST DateTime-TimeZone-0.86.tar.gz 376941 RMD160 08325dbbac9ee1eacb7fb6b6d2c9d5bfc97b7585 SHA1 d9c5eab450dbf58c83e03acff6fee26121203c1e SHA256 6ddf6b7108a662251ccb32de52a798da505e0d1d08ae453aec1b93ef03bb7cf0
 DIST DateTime-TimeZone-0.88.tar.gz 377145 RMD160 112c9ba2e15d2f8ab6359d706cae6b476a99a7f3 SHA1 cd55ff744c21b4f96206df60651d23b3c116b32c SHA256 f7e1d8a6d24069cd854ad0ed18c4e2799758fe56b109402bb8217cc2939397d9
+DIST DateTime-TimeZone-0.89.tar.gz 377236 RMD160 7f134f232d48a649e33c1c01f2f966444a5fc4ff SHA1 b0008f2d3a81ba6c44b7bda012e22c945fba5c15 SHA256 94383a543c37b77e67bdaadb02e894e8df63c9dcf5e2f06872dd8f902e553abd
 EBUILD DateTime-TimeZone-0.68.ebuild 748 RMD160 f8f5255d6fe701775ac03892c010612671c1dd4c SHA1 d820ed0d786d398451c8b64261ef811275c0eed5 SHA256 f1abaef94d5e8ed4720bfb1b9277557f9548d0473a86c391d088e583b3b74681
 EBUILD DateTime-TimeZone-0.83.01.ebuild 687 RMD160 da2db11bc968d294215fff823e7119f9179a39a9 SHA1 2e55e538713cfe92a5abf6c8fd1df0cd2f0c66df SHA256 2c2573ee36d4a96adb8c5cffdbc0cd6a64d58400ae714931a0ccedaf437e001a
 EBUILD DateTime-TimeZone-0.84.ebuild 682 RMD160 df0c727ced91205bca92cb335d1e833f9505e0ff SHA1 41ab3994df5871aa219fd6d8957352db3f8588d8 SHA256 ed323f9cf3d1322fadf3c667e62cf5cd9ea93792326adbc244bed7845bde8ab7
 EBUILD DateTime-TimeZone-0.85.ebuild 659 RMD160 1c4ad2f0fe10a0a68724f9362bc8eadc441f31ad SHA1 767818da4b7a789a1c91c6524ca056b54c18c531 SHA256 5699ad83b4382e96e655e7290c610b3724bf968c707de4aebaa9abe71c16b86e
 EBUILD DateTime-TimeZone-0.86.ebuild 659 RMD160 32be6ee9996ee4e52d6127098a70170719d1d1b7 SHA1 54aa0c8233e60487f5ff7d7c958f432f6a9d6279 SHA256 8c3529b7c213d936806fcdf2da2e4f0fb80513fea01213f4c50b29fd4f97fa59
 EBUILD DateTime-TimeZone-0.88.ebuild 661 RMD160 df8d7463e1d6b1cc962227ff39ccf1bda8d1ba06 SHA1 001a54e3f24c263998130f0012ac42b7b0761d20 SHA256 4fc0ea62e41e6c0010570975fe8e061e3aa55c4fe4e7bd4b9e53d910239aba11
-MISC ChangeLog 14353 RMD160 6838afd7de36193dffac1af5211be169befaa0db SHA1 b1118f8757ea18410ec33af332b8f4a03e7043fc SHA256 0e0cf265b661f30ecbdfe1ada5b26897eb65e67749f512aa52598b90a502ff74
+EBUILD DateTime-TimeZone-0.89.ebuild 661 RMD160 7c09f068d4ef43154fa3ae2adbb7d2b011536434 SHA1 13dfc8a23ee56db152fe6e9e2cd1b0d2834e7643 SHA256 31a87116a6d0be557d371b8d6e80a32b587e34221c371e90505c0b1a15903a88
+MISC ChangeLog 14490 RMD160 60246b47dea86406f4b220ed0dd7a309e281feec SHA1 ce31a41fc31c34a56bb8db5b7308cdac1af8a377 SHA256 0111fce3d48c57c82ba8f6539ee5586c12ce8a8ccefe2d02988d1d806d00f651
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
