@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.98 2009/04/07 04:26:13 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.99 2009/04/14 11:44:08 tove Exp $
+
+*DateTime-TimeZone-0.89 (14 Apr 2009)
+
+  14 Apr 2009; Torsten Veller <tove@gentoo.org>
+  +DateTime-TimeZone-0.89.ebuild:
+  Version bump
 
 *DateTime-TimeZone-0.88 (07 Apr 2009)
 
